Fixed text spacing, now testing JS

--- a/master.css
+++ b/master.css
@@ -105,5 +105,7 @@ h3{
     width: 90%;
     /* height: 20px; */
     margin: auto;
+    text-align: center;
 
 }
+
